--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -3953,7 +3953,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"با دو بار چرخاندن مچتان، برنامه دوربین را باز کنید"</string>
     <string name="screen_zoom_title" msgid="6928045302654960559">"اندازه نمایش"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"همه چیز را بزرگ‌تر یا کوچک‌تر می‌کند"</string>
-    <string name="screen_zoom_keywords" msgid="5964023524422386592">"تراکم نمایشگر، بزرگ‌نمایی صفحه، مقیاس، مقیاس‌بندی"</string>
+    <string name="screen_zoom_keywords" msgid="5964023524422386592">"تراکم نمایش، بزرگ‌نمایی صفحه، مقیاس، مقیاس‌بندی"</string>
     <string name="screen_zoom_preview_title" msgid="5288355628444562735">"پیش‌نمایش"</string>
     <string name="screen_zoom_make_smaller_desc" msgid="2628662648068995971">"کوچک‌تر ببینید"</string>
     <string name="screen_zoom_make_larger_desc" msgid="7268794713428853139">"بزرگ‌تر ببینید"</string>
