--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -571,7 +571,7 @@
     <string name="privatespace_hide_on_summary" msgid="6136704537527640183">"Bật"</string>
     <string name="private_space_category_system" msgid="1286843321867285700">"Hệ thống"</string>
     <string name="private_space_delete_title" msgid="636873505724100006">"Xoá không gian riêng tư"</string>
-    <string name="private_space_delete_header" msgid="4594429153176776184">"Xoá Không gian riêng tư?"</string>
+    <string name="private_space_delete_header" msgid="4594429153176776184">"Xoá không gian riêng tư?"</string>
     <string name="private_space_delete_summary" msgid="3344372988408565545">"Không gian riêng tư của bạn sẽ bị xoá khỏi thiết bị này. Mọi dữ liệu và ứng dụng riêng tư sẽ bị xoá. Bạn không thể huỷ thao tác này."</string>
     <string name="private_space_accounts" msgid="1078277762792056395">"Các tài khoản sau sẽ bị xoá khỏi không gian riêng tư của bạn:"</string>
     <string name="private_space_delete_button_label" msgid="1256981385318225002">"Xoá"</string>
@@ -2824,7 +2824,7 @@
     <string name="vpn_ipsec_user_cert" msgid="2714372103705048405">"Chứng chỉ người dùng IPSec"</string>
     <string name="vpn_ipsec_ca_cert" msgid="5558498943577474987">"Chứng chỉ IPSec CA"</string>
     <string name="vpn_ipsec_server_cert" msgid="1411390470454731396">"Chứng chỉ máy chủ IPSec"</string>
-    <string name="vpn_show_options" msgid="6105437733943318667">"Hiện tùy chọn nâng cao"</string>
+    <string name="vpn_show_options" msgid="6105437733943318667">"Hiện tuỳ chọn nâng cao"</string>
     <string name="vpn_username" msgid="8671768183475960068">"Tên người dùng"</string>
     <string name="vpn_password" msgid="1183746907642628127">"Mật khẩu"</string>
     <string name="vpn_save_login" msgid="5986762519977472618">"Lưu thông tin tài khoản"</string>
