--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -2502,7 +2502,7 @@
     <string name="battery_detail_since_full_charge" msgid="5650946565524184582">"Uitsplitsing sinds laatste volledige lading"</string>
     <string name="battery_last_full_charge" msgid="8308424441475063956">"Laatste volledige lading"</string>
     <string name="battery_full_charge_last" msgid="465146408601016923">"Geschatte gebruikstijd na volledige lading"</string>
-    <string name="battery_footer_summary" msgid="6753248007004259000">"Resterende batterijtijd is een schatting en hangt af van het gebruik"</string>
+    <string name="battery_footer_summary" msgid="6753248007004259000">"Resterende batterijduur is een schatting en hangt af van het gebruik"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Batterijgebruik"</string>
     <string name="battery_not_usage" msgid="3851536644733662392">"Geen gebruik sinds laatste volledige lading"</string>
     <string name="battery_not_usage_24hr" msgid="8397519536160741248">"Geen gebruik in de afgelopen 24 u"</string>
@@ -4996,7 +4996,7 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Later opnieuw opstarten"</string>
     <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Ruimtelijke audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Compatibele media leveren een royaler geluid"</string>
-    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Bewegingen van het hoofd volgen"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Hoofdtracking"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"De audio wordt aangepast als je je hoofd beweegt, voor een natuurlijker geluid"</string>
     <string name="bluetooth_details_permissions_sync_title" msgid="7277580382321003521">"Rechten synchroniseren vanaf de telefoon"</string>
     <string name="bluetooth_details_permissions_sync_summary" msgid="8125037984381432059">"Geef je smartwatch dezelfde app-rechten die je op deze telefoon hebt toegestaan"</string>
