Revert "UX updates in Settings for unrestricting permissions."
This reverts commit ff6c0b3fcb5d0311403d800a9b83850a36617706.

Reason for revert: b/340458649

Change-Id: I9fd32f11a9650431ed56c10434e82a766f74f400

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4077,7 +4077,7 @@
     <!-- Manage applications, restore updated system application to factory version -->
     <string name="app_factory_reset">Uninstall updates</string>
     <!-- [CHAR LIMIT=50] Manage applications, unlock restricted setting from lock screen title -->
-    <string name="app_restricted_settings_lockscreen_title">Allow restricted permissions</string>
+    <string name="app_restricted_settings_lockscreen_title">Allow restricted settings</string>
     <!-- Manage applications, individual application info screen, screen, message text under Launch by default heading. This is present if the app is set as a default for some actions. -->
     <string name="auto_launch_enable_text">Some activities you\u2019ve selected open in this app by default.</string>
     <!-- Manage applications, individual application info screen, screen, message text under Launch by default heading. This is present if the app was given user permission to create widgets. -->
