--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8680,7 +8680,9 @@
     <string name="notif_listener_more_settings_desc">More settings are available inside this app</string>
 
     <!-- Title for Polite Notifications setting  [CHAR LIMIT=30]-->
-    <string name="notification_polite_title">Notification cooldown</string>
+    <string name="notification_polite_title">Cooldown</string>
+    <string name="notification_polite_main_control_title">Use Cooldown</string>
+    <string name="notification_polite_description">When you get many notifications within a short time span, your device will minimize sound interruptions and pop-ups on the screen. Calls, alarms, and priority conversations will still alert as notmal, and all delivered notifications are easy to find in the Shade.</string>
     <string name="notification_polite_all_apps">Apply cooldown to all notifications</string>
     <string name="notification_polite_all_apps_summary">Gradually lower the notification volume when you get many successive notifications from the same app</string>
     <string name="notification_polite_conversations">Apply cooldown to conversations</string>
@@ -8690,7 +8692,7 @@
     <string name="notification_polite_vibrate_unlocked">Vibrate when unlocked</string>
     <string name="notification_polite_vibrate_unlocked_summary">Only vibrate when screen is unlocked</string>
     <string name="notification_polite_work">Apply to work profiles</string>
-    <string name="notification_polite_work_summary">Apply the notification cooldown settings from your personal profile to your work profile</string>
+    <string name="notification_polite_work_summary">Apply to work profile apps</string>
 
 
     <!-- Title for managing VR (virtual reality) helper services. [CHAR LIMIT=50] -->
