[Audiosharing] Update strings.
Test: atest -c com.android.settings.connecteddevice.audiosharing.audiostreams
Bug: 322819449
Change-Id: Iba0fa8d3470b896b1f672e01f88d405dcec08fe0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13385,10 +13385,8 @@
     <string name="audio_streams_add_source_bad_code_state_summary">Check password and try again</string>
     <!-- The preference summary when add source response results in general failure [CHAR LIMIT=NONE] -->
     <string name="audio_streams_add_source_failed_state_summary">Can\u0027t connect. Try again.</string>
-    <!-- The preference summary when waiting for add source response [CHAR LIMIT=NONE] -->
-    <string name="audio_streams_add_source_wait_for_response_summary">Connecting\u2026</string>
-    <!-- The preference summary when waiting for sync [CHAR LIMIT=NONE] -->
-    <string name="audio_streams_wait_for_sync_state_summary">Scanning\u2026</string>
+    <!-- The preference summary when connecting [CHAR LIMIT=NONE] -->
+    <string name="audio_streams_connecting_summary">Connecting\u2026</string>
     <!-- Le audio streams audio lost dialog title [CHAR LIMIT=NONE] -->
     <string name="audio_streams_dialog_stream_is_not_available">Audio stream isn\u0027t available</string>
     <!-- Le audio streams audio lost dialog subtitle [CHAR LIMIT=NONE] -->
@@ -13408,7 +13406,7 @@
     <!-- Le audio streams confirm dialog default device [CHAR LIMIT=NONE] -->
     <string name="audio_streams_dialog_default_device">connected compatible headphones</string>
     <!-- Le audio streams activity title [CHAR LIMIT=NONE] -->
-    <string name="audio_streams_activity_title">Broadcasts</string>
+    <string name="audio_streams_activity_title">Audio streams</string>
     <!-- Le audio streams no password summary [CHAR LIMIT=NONE] -->
     <string name="audio_streams_no_password_summary">No password</string>
     <!-- Le audio streams failure dialog subtitle [CHAR LIMIT=NONE] -->
